YYYY-MM-DD [YYYYMMDD]

  [doc] remove obsolete articles
  [doc] implement worklfow to build & deploy documentation
  [mod] fix issues reported by: hatch run pylint-check
  [mod] hatch run fix - code formatting using black & isort
  [mod] switch develop environment to hatch

2024-09-24 [20240924]

	[fix] export option to kernel-doc directive
	[fix] kernel_include.py: cope with docutils 0.21

2023-10-20 [20231020]

	[fix] build: don't include test folder in the distributed package

2023-06-29 [20230629]

	Python 3.12 compatibility / imp replaced by importlib

2023-05-06 [20230506]

        rename kernel-* commands into linuxdoc.* commands & add man pages

	* Deprecated: The maintenance of the ``kernel-*`` command ends in
	version 20230321.  The ``kernel-*`` commands will be removed in a future
	release: use the ``linuxdoc.*`` commands.

	- kernel-doc     --> linuxdoc.rest
	- kernel-autodoc --> linuxdoc.autodoc
        - kernel-lintdoc --> linuxdoc.lintdoc
        - kernel-grepdoc --> linuxdoc.grepdoc

2023-03-21 [20230321] LICENSE AGPLv3+

	* Changed: GNU Affero General Public License v3 or later (AGPLv3+)