@@ -1,6 +1,0 @@
-[theme]
-inherit = pocoo
-stylesheet = custom.css
-
-[options]
-touch_icon =
