@@ -2,108 +2,90 @@
 #
 # Sphinx documentation build configuration file
 
-import re
 import linuxdoc.__pkginfo__ as PKG
-import sys, os
 
-from pallets_sphinx_themes import ProjectLink
+DOC_URL = "https://return42.github.io/linuxdoc"
+GIT_URL = "https://github.com/return42/linuxdoc"
+GIT_BRANCH = "master"
 
-sys.path.append(os.path.abspath('../utils/site-python'))
-# from sphinx_build_tools import load_sphinx_config
-
-DOC_URL    = "https://return42.github.io/linuxdoc"
-GIT_URL    = "https://github.com/return42/linuxdoc"
-GIT_BRANCH = 'master'
-
-project   = 'LinuxDoc'
+project = "LinuxDoc"
 copyright = PKG.__copyright__
-version   = PKG.__version__
-release   = PKG.__version__
-author    = 'return42'
+version = PKG.__version__
+release = PKG.__version__
+author = "return42"
 show_authors = True
 
-source_suffix       = '.rst'
-show_authors        = True
-master_doc          = 'index'
-templates_path      = ['_templates']
-exclude_patterns    = ['_build', 'slides']
-todo_include_todos  = True
-highlight_language = 'none'
+source_suffix = ".rst"
+show_authors = True
+master_doc = "index"
+templates_path = ["_templates"]
+exclude_patterns = ["_build", "slides"]
+todo_include_todos = True
+highlight_language = "none"
 
 # if self-signed, disable tls verify
 # tls_verify = False
 
 extensions = [
-    'sphinx.ext.imgmath'
-    , 'sphinx.ext.autodoc'
-    , 'sphinx.ext.extlinks'
-    #, 'sphinx.ext.autosummary'
-    #, 'sphinx.ext.doctest'
-    , 'sphinx.ext.todo'
-    , 'sphinx.ext.coverage'
-    #, 'sphinx.ext.pngmath'
-    #, 'sphinx.ext.mathjax'
-    , 'sphinx.ext.viewcode'
-    , 'sphinx.ext.intersphinx'
-    , 'sphinxcontrib.programoutput'  # https://github.com/NextThought/sphinxcontrib-programoutput
-    , 'sphinx_tabs.tabs'             # https://github.com/djungelorm/sphinx-tabs
-    , 'pallets_sphinx_themes'
-
-    , 'linuxdoc.rstFlatTable'    # Implementation of the 'flat-table' reST-directive.
-    , 'linuxdoc.rstKernelDoc'    # Implementation of the 'kernel-doc' reST-directive.
-    , 'linuxdoc.kernel_include'  # Implementation of the 'kernel-include' reST-directive.
-    , 'linuxdoc.manKernelDoc'    # Implementation of the 'kernel-doc-man' builder
-    , 'linuxdoc.cdomain'         # Replacement for the sphinx c-domain (not in sphinx-doc >= v3.0)
-    , 'linuxdoc.kfigure'         # Sphinx extension which implements scalable image handling.
+    "sphinx.ext.imgmath",
+    "sphinx.ext.autodoc",
+    "sphinx.ext.extlinks",
+    "sphinx.ext.todo",
+    "sphinx.ext.coverage",
+    "sphinx.ext.viewcode",
+    "sphinx.ext.intersphinx",
+    "sphinxcontrib.programoutput",  # https://github.com/NextThought/sphinxcontrib-programoutput
+    "sphinx_tabs.tabs",  # https://github.com/djungelorm/sphinx-tabs
+    "linuxdoc.rstFlatTable",  # Implementation of the 'flat-table' reST-directive.
+    "linuxdoc.rstKernelDoc",  # Implementation of the 'kernel-doc' reST-directive.
+    "linuxdoc.kernel_include",  # Implementation of the 'kernel-include' reST-directive.
+    "linuxdoc.manKernelDoc",  # Implementation of the 'kernel-doc-man' builder
+    "linuxdoc.cdomain",  # Replacement for the sphinx c-domain (not in sphinx-doc >= v3.0)
+    "linuxdoc.kfigure",  # Sphinx extension which implements scalable image handling.
 ]
 
 intersphinx_mapping = {}
-intersphinx_mapping['linux'] = (
-    'https://www.kernel.org/doc/html/latest/', None)
+intersphinx_mapping["linux"] = ("https://www.kernel.org/doc/html/latest/", None)
 
 extlinks = {}
-extlinks['origin'] = (GIT_URL + '/blob/' + GIT_BRANCH + '/%s', 'git://%s')
-extlinks['commit'] = (GIT_URL + '/commit/%s', '#%s')
+extlinks["origin"] = (GIT_URL + "/blob/" + GIT_BRANCH + "/%s", "git://%s")
+extlinks["commit"] = (GIT_URL + "/commit/%s", "#%s")
 
 # usage:    :mid:`<mail's Message-ID>`  e.g.
-extlinks['mid'] = ('http://mid.mail-archive.com/%s', '%s')
-extlinks['lwn'] = ('https://lwn.net/Articles/%s', 'LWN article #%s')
-extlinks['rst-directive'] = ('http://docutils.sourceforge.net/docs/ref/rst/directives.html#%s', '%s')
+extlinks["mid"] = ("http://mid.mail-archive.com/%s", "%s")
+extlinks["lwn"] = ("https://lwn.net/Articles/%s", "LWN article #%s")
+extlinks["rst-directive"] = (
+    "http://docutils.sourceforge.net/docs/ref/rst/directives.html#%s",
+    "%s",
+)
 
 # sphinx.ext.imgmath setup
-html_math_renderer = 'imgmath'
-imgmath_image_format = 'svg'
+html_math_renderer = "imgmath"
+imgmath_image_format = "svg"
 imgmath_font_size = 14
 # sphinx.ext.imgmath setup END
 
-html_search_language = 'en'
+html_title = "LinuxDoc"
+html_theme = "furo"
 
-sys.path.append(os.path.abspath('_themes'))
-html_theme           = "custom"
-html_logo            = 'darmarIT_logo_128.png'
-html_theme_path      = ['_themes']
-# html_static_path     = ["static"]
-
-html_theme_options = {"index_sidebar_logo": True}
-html_context = {
-    "project_links": [
-        ProjectLink("Home", DOC_URL),
-        ProjectLink("Source", GIT_URL),
-        ProjectLink("API", DOC_URL + '/linuxdoc-api/linuxdoc.html'),
+html_sidebars = {
+    "**": [
+        "sidebar/scroll-start.html",
+        "sidebar/brand.html",
+        "sidebar/search.html",
+        "sidebar/navigation.html",
+        "sidebar/ethical-ads.html",
+        "sidebar/scroll-end.html",
     ]
 }
 
-if GIT_URL:
-    html_context["project_links"].append(ProjectLink("Source", GIT_URL))
-if getattr(PKG, "__issues__", False):
-    html_context["project_links"].append(ProjectLink("Issue Tracker", PKG.__issues__))
-if getattr(PKG, "__author_email__", False):
-    html_context["project_links"].append(ProjectLink("Contact", 'mailto:' + PKG.__author_email__))
+html_static_path = ["_static"]
 
-html_sidebars = {
-    "**": ["project.html", "relations.html", "localtoc.html", "searchbox.html"],
-}
-singlehtml_sidebars = {"index": ["project.html", "localtoc.html"]}
+html_css_files = [
+    "linuxdoc.css",
+]
+html_search_language = "en"
+html_logo = "darmarIT_logo_128.png"
 
 # ------------------------------------------------------------------------------
 # Options of the kernel-doc parser
@@ -134,7 +116,7 @@ kernel_doc_mansect = None
 
 # One entry per manual page. List of tuples
 # (source start file, name, description, authors, manual section).
-man_pages = [ ]
+man_pages = []
 
 # In nickpick mode, it will complain about lots of missing references that
 #
@@ -152,10 +134,4 @@ nitpick_ignore = [
     ("c:type", "u32"),
     ("c:type", "u64"),
     ("c:type", "u8"),
-    ]
-
-# ------------------------------------------------------------------------------
-# Since loadConfig overwrites settings from the global namespace, it has to be
-# the last statement in the conf.py file
-# ------------------------------------------------------------------------------
-# load_sphinx_config(globals())
+]
