@@ -176,48 +176,3 @@ markup and the reST markup will bite each other.  There you will need some
 quotes (``\``) to escape, that might partial cutting your joy in kernel-doc.
 Anyway, overall you should be able to recognize the daily benefit of using
 kernel-doc markup in your projects.
-
-LinuxDoc feature overview
-=========================
-
-kernel-doc
-  A "C" friendly markup, the parser, the Sphinx-doc extension and some tools.
-  The kernel-doc markup embeds documentation within the C source files, using a
-  few simple conventions. The parser grabs the documentation from source and
-  generates proper reST :ref:`[ref] <kernel-doc-intro>`.  The parser is written
-  in Python and its API is used by the corresponding Sphinx-doc extension.
-  Command line tools shipped with:
-
-  - linuxdoc.autodoc: Suitable for automatic API documentation :ref:`[ref]
-    <linuxdoc.autodoc>`.
-
-  - linuxdoc.lintdoc: *Lint* kernel-doc comments from source code :ref:`[ref]
-    <linuxdoc.lintdoc>`.
-
-  - linuxdoc.rest: A command line interface for kernel-doc's parser API :ref:`[ref]
-    <linuxdoc.rest>`.
-
-kernel-doc-man
-  A man page builder. An extension/replacement of the common Sphinx-doc *man*
-  builder also integrated in the kernel-doc Sphinx-doc extension :ref:`[ref]
-  <man-pages>`.
-
-flat-table
-  A diff and author friendly list-table replacement with *column-span*,
-  *row-span* and *auto-span* :ref:`[ref] <rest-flat-table>`.
-
-cdomain
-  A customized `Sphinx's C Domain`_ extension. Suitable for demanding projects
-  :ref:`[ref] <customized-c-domain>`.
-
-kfigure
-  Sphinx extension which implements scalable image handling. Simplifies image
-  handling from the author's POV. Wins where Sphinx-doc image handling
-  fails. Whatever graphic tools available on your build host, you always get the
-  best output-format. Graphviz's DOT format included :ref:`[ref] <kfigure>`.
-
-kernel-include
-  A replacement for the ``include`` reST directive. The directive expand
-  environment variables in the path name and allows to include files from
-  arbitrary locations ref:`[ref] <kernel-include-directive>`.
-
